# agent-runtime-python

./: .dockerignore  .gitignore  .mailmap  AGENTS.md  CONTEXT.md  Dockerfile  README.md  compose.observability.yaml  pyproject.toml  pyrightconfig.json
.agents/skills/data-visualization/: SKILL.md
.codex/: config.toml  hooks.json
.codex/hooks/: format_edited_python_files.mjs  lint_on_stop.mjs
docs/: codebase.md
docs/adr/: 0001-provider-reported-usage-is-canonical.md  0002-report-trial-usage-through-worker-events.md  0003-budget-observability-is-reporting-only-in-v1.md  0004-use-opentelemetry-genai-as-primary-model-span-contract.md  0005-use-evidence-sink-adapters-for-experiment-evidence.md
docs/agents/: domain.md  issue-tracker.md  runtime-boundary.md  runtime-usage.md
docs/handoffs/: 2026-07-23-agent-experimentation-runtime.md
docs/research/: agent-dev-trial-observability-implementation.md  agent-dev-trial-observability.md  agent-experimentation-challenges-2026-07.md  agent-experimentation-prior-art-2026-07.md  experiment-artifact-storage-architecture-2026-07.md
ops/observability/acceptance/: run_observability_smoke.py  run_provider_usage_acceptance.py  smoke_commands.py  smoke_dashboard.py  smoke_results.py  smoke_telemetry.py
ops/observability/dashboards/: README.md  agent-runtime-experiments.dashboard.json  dashboard_builder.py  dashboard_queries.py  dashboard_tuning.py  generate_agent_runtime_experiments_dashboard.py
src/agent_runtime_python/: __init__.py  experiment.py  graphs.py  internal_api.py  logger.py  protocol.py  smoke_graph.py  telemetry.py  worker.py
src/agent_runtime_python/api/: __init__.py  app.py  middleware.py  models.py  routes.py  runtime.py
src/agent_runtime_python/experiments/: __init__.py  cli.py  planning.py  results.py  runner.py  serialization.py  targets.py  trial_commands.py  types.py
src/agent_runtime_python/runtime/: graphs.py  (+3 more)
tests/: experiment_helpers.py  test_experiment.py  test_experiment_planning.py  test_experiment_results.py  test_experiment_targets.py  test_internal_api.py  test_observability_acceptance_smoke.py  test_observability_dashboard_smoke.py  test_observability_dashboards.py  test_provider_usage_mappers.py  test_worker.py  test_worker_runtime.py  test_worker_telemetry.py  worker_helpers.py
(+17 files in other folders)
