[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-python"
version = "0.1.0"
description = "Python LangGraph runtime and experiment tooling for Agent Run workers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agent-runtime-python-worker = "agent_runtime_python.worker:main"

[tool.setuptools.packages.find]
where = ["src"]
