[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-python"
version = "0.1.0"
description = "Python LangGraph runtime and experiment tooling for Agent Run workers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "jsonschema>=4.26.0",
    "langgraph>=1.2.9",
    "openinference-semantic-conventions>=0.1.30",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-exporter-otlp-proto-http>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "starlette<1",
    "uvicorn>=0.51.0",
]

[project.scripts]
agent-runtime-python-worker = "agent_runtime_python.runtime.worker:main"
agent-runtime-python-experiment = "agent_runtime_python.experiment:main"
agent-runtime-python-internal-api = "agent_runtime_python.internal_api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_runtime_python = ["schemas/*.json"]

[tool.black]
target-version = ["py312"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "black>=26.5.1",
    "grafana-foundation-sdk>=1769699998!10.1.0",
]
